deploy/kube/ollama.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "backend"
  name: "backend-ollama"
spec:
  selector:
    matchLabels:
      app: "ollama"
  template:
    metadata:
      labels:
        app: "ollama"
    spec:
      volumes:
        - name: model-storage
          persistentVolumeClaim:
            claimName: ollama-model-persistent-volume-claim
        - name: file-storage
          persistentVolumeClaim:
            claimName: ollama-file-persistent-volume-claim
        - name: script
          configMap:
            name: ollama-script
            defaultMode: 0755
      containers:
        - name: ollama
          image: ollama/ollama:latest
          volumeMounts:
            - name: model-storage
              mountPath: /root/.ollama
              subPath: ollama-model
            - name: file-storage
              mountPath: /model_files
              subPath: ollama-file
            - name: script
              mountPath: /model_files/run_ollama.sh
              subPath: run_ollama.sh
          command: ["/bin/sh", "/model_files/run_ollama.sh"]
          ports:
            - containerPort: 11434
---
apiVersion: v1
kind: Service
metadata:
  namespace: "backend"
  name: "ollama-service"
spec:
  selector:
    app: "ollama"
  ports:
    - port: 11434
      targetPort: 11434
