deploy/kube/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "backend"
  name: "backend-redis"
spec:
  selector:
    matchLabels:
      app: "redis"
  template:
    metadata:
      labels:
        app: "redis"
    spec:
      containers:
        - name: backend-redis
          image: bitnami/redis:6.2.5
          startupProbe:
            exec:
              command: ["redis-cli", "ping"]
            failureThreshold: 50
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            limits:
              memory: "200Mi"
              cpu: "250m"
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  namespace: "backend"
  name: "backend-redis-service"
spec:
  selector:
    app: "redis"
  ports:
    - port: 6379
      targetPort: 6379

---
