deploy/kube/app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: backend
  name: backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: app
          image: wahidmshafin/backend:latest
          readinessProbe:
            httpGet:
              path: /api/health
              port: api-port
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              memory: "200Mi"
              cpu: "100m"
          ports:
            - containerPort: 8000
              name: api-port
---
apiVersion: v1
kind: Service
metadata:
  namespace: backend
  name: backend-app-service
spec:
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: api-port
      name: api-port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-app
  namespace: backend
  labels:
    name: backend-app
spec:
  rules:
    - host: backend.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backend-app-service
                port:
                  name: api-port

---
